# mausoleum

./: .gitattributes  .gitignore  README.md  replace_bridges.py
.githooks/: prepare-commit-msg
Server/GameServer/: CMakeLists.txt  vcpkg.json
Server/GameServer/include/backend/: BackendConstants.h  BackendService.h
Server/GameServer/include/common/: ConcurrentQueue.h  ConcurrentQueue.inl  IClientManager.h  IServer.h  Platform.h  ScopedTimer.h
Server/GameServer/include/lobby/: LobbyConstants.h  LobbyPacketRouter.h  LobbyServer.h  LobbyService.h
Server/GameServer/include/network/: ConnectionRegistry.h  NetworkIO.h  NetworkIOPrimitives.h  NetworkService.h  NetworkTypes.h
Server/GameServer/include/voice/: VoiceClientManager.h  VoiceConstants.h  VoicePacketRouter.h  VoiceServer.h
Server/GameServer/include/websocket/: WebSocketConstants.h  WebSocketRouter.h  WebSocketServer.h
Server/GameServer/src/: LobbyServer.h  Player.h  Room.h  RoomManager.h  VoiceServer.h  main.cpp
Server/GameServer/src/backend/: BackendService.cpp
Server/GameServer/src/common/: IClientManager.h  IServer.h  Logger.cpp  Platform.h  ScopedTimer.h
Server/GameServer/src/lobby/: LobbyClientManager.cpp  LobbyClientManager.h  LobbyConstants.h  LobbyPacketRouter.cpp  LobbyPacketRouter.h  LobbyServer.cpp  LobbyServer.h  LobbyService.cpp
Server/GameServer/src/network/: ConnectionRegistry.cpp  NetworkIO.cpp  NetworkService.cpp
Server/GameServer/src/voice/: VoiceClientManager.cpp  VoiceClientManager.h  VoicePacketRouter.cpp  VoicePacketRouter.h  VoicePacketType.h  VoiceServer.cpp  VoiceServer.h
(+7185 files in other folders)
